src/main/kotlin/com/example/server/error/exception/MultipartFileNullException.kt
package com.example.server.error.exception

class MultipartFileNullException : RuntimeException()